<resources>
    <string name="locale">en</string>
    <string name="app_name">F3Ftimer</string>
    <string name="app_uuid" translatable="false">9ab9ee24-331c-44d9-ae73-23e0befc9e57</string>
    <string name="external_display_uuid" translatable="false">cbedac48-833c-4f3e-b69a-834e9e61d0c9</string>
    <string name="HC05_uuid" translatable="false">"00001101-0000-1000-8000-00805F9B34FB"</string>
    <string name="version">Version</string>
    <string name="credits">An open source project by Mark Treble</string>
    <string name="repository" translatable="false">https://www.github.com/marktreble/f3f-timer</string>
    <string name="instructions" translatable="false">https://www.github.com/marktreble/f3f-timer/blob/master/F3FTimerSoftware.docx</string>
    <string name="help">Please see the link below for instruction on how to use this software.</string>
    <string name="menu_settings">Settings</string>
    <string name="app_pilots">Pilot Manager</string>
    <string name="app_race">Race Manager</string>
    <string name="pilot_name">Pilot Name</string>
    <string name="pilot_firstname">First Name</string>
    <string name="pilot_surname">Surname</string>
    <string name="pilot_email">Email Address</string>
    <string name="pilot_frequency">Frequency</string>
    <string name="pilot_models">Models</string>
    <string name="pilot_nationality">Nationality</string>
    <string name="pilot_language">Language</string>
    <string name="pilot_team">Team Name</string>
    <string name="pilot_nac_no">NAC No.</string>
    <string name="pilot_fai_id">FAI ID</string>
    <string name="race_name">Race Name</string>
    <string name="race_type">Race Type</string>
    <string name="race_offset">Flying Order Offset</string>
    <string name="race_rounds_per_flight">Rounds per Flight</string>
    <string name="race_race">Race</string>
    <string name="race_practice">Practice</string>
    <string name="button_save">Save</string>
    <string name="button_add" translatable="false">+</string>
    <string name="button_next">Next</string>
    <string name="button_done">Done</string>
    <string name="button_scramble" translatable="false">S</string>
    <string name="button_rotate" translatable="false">R</string>
    <string name="button_manual">M</string>
    <string name="button_up" translatable="false">^</string>
    <string name="button_down" translatable="false">v</string>
    <string name="button_next_pilot">Next Pilot</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_accept">Accept</string>
    <string name="skip_number">Skip number</string>
    <string name="add_pilot">Add Pilot</string>
    <string name="random_shuffle">Random Shuffle</string>
    <string name="rotate_shuffle">Rotate Shuffle</string>
    <string name="manual_shuffle">Manual Shuffle</string>
    <string name="resize">Resize</string>
    <string name="retired">Ret</string>
    <string name="reflight">RF</string>
    <string name="notime" translatable="false">--.--</string>
    <string name="thirty" translatable="false">30.00</string>
    <string name="start_working_time">Start Working Time</string>
    <string name="working_time_started">Working Time Started</string>
    <string name="working_time_expired">Working Time Expired</string>
    <string name="late_entry">Late Entry</string>
    <string name="model_launched">Model Launched</string>
    <string name="model_launch">Model Launch</string>
    <string name="abort">Abort</string>
    <string name="race_aborted">Race Aborted</string>
    <string name="resume">Resume</string>
    <string name="ignore">Ignore</string>
    <string name="scrub_round">Scrub Round</string>
    <string name="scrub_group">Scrub Group</string>
    <string name="minutes_remaining">Minutes Remaining</string>
    <string name="zero" translatable="false">0.00</string>
    <string name="off_course">Off Course</string>
    <string name="on_course">On Course</string>
    <string name="working_time">Working Time</string>
    <string name="and_last">And Last</string>
    <string name="finish_race">Finish Race</string>
    <string name="next_round">End Round</string>
    <string name="penalty">P%d</string>
    <string name="app_results">Results Manager</string>
    <string name="refly">Refly?</string>
    <string name="finish">Finish</string>
    <string name="score_zero">Score zero</string>
    <string name="space"> </string>
    <string name="menu_new_race">New Race</string>
    <string name="menu_import_race">Import Race</string>
    <string name="menu_export_race">Export Race</string>
    <string name="select_import_source">Import Race</string>
    <string name="select_export_destination">Export Race</string>
    <string name="select_export_results_destination">Export Results</string>
    <string name="select_share_results_destination">Share Leaderboard</string>
    <string name="menu_add_pilots">Add Pilots</string>
    <string name="menu_import_pilots">Import Pilots</string>
    <string name="menu_export_pilots">Export Pilots</string>
    <string name="menu_next_round">Finish Round</string>
    <string name="menu_add_pilot">New Pilot</string>
    <string name="menu_group_score">Group Score</string>
    <string name="menu_change_flying_order">Change Flying Order</string>
    <string name="menu_change_start_number">Change Start Number</string>
    <string name="menu_scrub_round">Scrub Round/Group</string>
    <string name="menu_scrub_round_confirm">Are you sure you want to scrub the round/group?</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_export">Export</string>
    <string name="menu_show_round_timeout">Show Round Expiring Timer</string>
    <string name="menu_print_pilots_list">Print Pilot List</string>
    <string name="enter_time">Enter Time</string>
    <string name="audio">Audio Options</string>
    <string name="USB_IOIO">USB - IOIO</string>
    <string name="USB_OA" translatable="false">USB - Open Accessory</string>
    <string name="USB_OTHER">USB - Other</string>
    <string name="BLUETOOTH_HC_05" translatable="false">Bluetooth - HC-05</string>
    <string name="TCP_IO" translatable="false">TCP/IP Socket - f3ftimer-server:1234</string>
    <string name="UDP" translatable="false">UDP Socket - PiCam</string>
    <string name="Demo">Demo Mode - On Screen Buzzers</string>
    <string name="input_tcpio_ip">IP / host name for \"f3ftimer-server\"</string>
    <string name="bluetooth_paired_device">HC-05 Paired Device</string>
    <string name="external_results_http">External Results (HTTP)</string>
    <string name="external_results_BT">External Results (Bluetooth)</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="usb_baudrate">Baud Rate</string>
    <string name="usb_stopbits">Stop Bits</string>
    <string name="usb_databits">Data Bits</string>
    <string name="usb_parity">Parity</string>
    <string name="ioio_rx" translatable="false">IOIO RX Pin</string>
    <string name="ioio_tx" translatable="false">IOIO TX Pin</string>
    <string name="reset_to_defaults">Reset to Defaults</string>
    <string name="udp_baseAIP" translatable="false">Base A IP Address</string>
    <string name="udp_baseBIP" translatable="false">Base B IP Address</string>
    <string name="soft_buzz">Software Buzzer</string>
    <string name="none">None</string>
    <string name="enter_num_groups">Enter Number of Groups</string>
    <string name="enter_start_number">Enter Start Number</string>
    <string name="generate_start_number">Generate Start Number</string>
    <string name="enter_rotate_offset">Enter number of shifted positions</string>
    <string name="ttl_select_pilots">Select Pilots to Add</string>
    <string name="wifi">Wifi Buzzers</string>
    <string name="pref_enable_acra">Enable ACRA Crash Reports</string>
    <string name="pref_acra_enabled">Enabled</string>
    <string name="pref_acra_disabled">Disabled</string>
    <string name="en">English</string>
    <string name="fr">French</string>
    <string name="de">German</string>
    <string name="nl">Dutch</string>
    <string name="es">Spanish</string>
    <string name="ttl_round_number">Round %d</string>
    <string name="ttl_round_number_short">R%d</string>
    <string name="ttl_round_number_name">R%1$d - %2$s</string>
    <string name="ttl_round_groups"> - %1$d Groups</string>
    <string name="ttl_round_number_groups">R%1$d%2$s</string>
    <string name="ftd_result" formatted="true">Fastest Time: %1$.2f by %2$s in round %3$d</string>
    <string name="ttl_round_in_progress">Round in Progress (R%1$d)</string>
    <string name="ttl_completed_rounds">Completed Rounds</string>
    <string name="ttl_team_results">Team Results</string>
    <string name="ttl_leader_board">Leader Board</string>
    <string name="ttl_auto_read">Announce Results</string>
    <string name="cmenu_reflight">Award Reflight</string>
    <string name="cmenu_add_penalty">Add Penalty</string>
    <string name="cmenu_remove_penalty">Remove Penalty</string>
    <string name="cmenu_skip_round">Skip Round (Award 0 points)</string>
    <string name="cmenu_retire">Retire From Race</string>
    <string name="cmenu_reinstate">Reinstate</string>
    <string name="cmenu_manual_entry">Enter Time Manually</string>
    <string name="cmenu_edit_pilot">Edit Pilot details</string>
    <string name="ttl_pilot_list">Pilot List</string>
    <string name="app_theme">Colour Theme</string>
    <string name="external_results_files">External Results (FileSystem)</string>
    <string name="leader_board">Leader Board</string>
    <string name="group_heading">Group %d</string>
    <string name="no_rounds">No rounds completed yet</string>
    <string name="no_teams">No teams set in the race</string>
    <string name="team_results">Team Results</string>
    <string name="invalid_email">Email address is invalid</string>
    <string name="wind_meter_settings">Wind Meter Settings</string>
    <string name="wind_warning">Wind Illegal</string>
    <string name="wind_angle_offset">Slope Orientation in degrees</string>
    <string name="wind_measurement">Wind Measurement</string>
    <string name="wind_warning_audible">Wind Warning Audible</string>
    <string name="wind_speed_announcement">%s metres per second</string>
    <string name="A" translatable="false">A</string>
    <string name="B" translatable="false">B</string>
    <string name="end_of_round">End of Round</string>
    <string name="run_complete">Run Complete</string>
    <string name="source_url">Source (URL)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="USBJE">USB - Jon Edison Timer Box</string>
    <string name="whistle">Whistle</string>
    <string name="beep">Beep</string>
    <string name="snd_off_course">Off Course</string>
    <string name="snd_on_course">On Course</string>
    <string name="snd_turn">Turn</string>
    <string name="snd_turn9">Last Turn</string>
    <string name="snd_penalty">Penalty</string>
    <string name="awaiting_connection">Awaiting Connection..</string>
    <string name="http_protocol_hint" translatable="false">http(s)://</string>
    <string name="remember_login_details">  Remember these details</string>
    <string name="err_no_pilots">No Pilots</string>
    <string name="err_no_pilots_instruction">Before you create a race, you must set up a database of pilots in the Pilot Manager</string>
    <string name="btn_open_pilot_manager">Open Pilot Manager</string>
    <string name="err_external_display">External Display</string>
    <string name="empty" translatable="false">
    </string>
</resources>