<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">


    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirty"
        android:layout_gravity="center_horizontal"
        android:textColor="?attr/t2"
        android:layout_marginTop="@dimen/twenty"
        android:textSize="@dimen/clock_time">

    </TextView>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_remaining"
        android:layout_gravity="center_horizontal"
        android:textColor="?attr/t2"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/twenty">

        <Button
            android:id="@+id/button_scrub"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/scrub_round"
            style="@style/AppTheme.Button.Negative" />

        <Button
            android:id="@+id/button_ignore"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:textColor="@color/text2"
            android:textSize="20sp"
            android:text="@string/ignore"
            style="@style/AppTheme.Button.Positive" />

    </LinearLayout>
</LinearLayout>
