<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	 	android:background="@drawable/rounded_corners">
        <ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent">
    	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@android:color/transparent"
	    	android:paddingLeft="10dp"
	    	android:paddingRight="10dp"
	    	android:paddingTop="10dp"
	    	android:paddingBottom="10dp">
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pilot_firstname"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/text3">
                <requestFocus />
            </TextView>

		    <EditText
		        android:id="@+id/editText1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textCapSentences" >

		        <requestFocus />
		    </EditText>
		        
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pilot_surname"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/text3" />

		    <EditText
		        android:id="@+id/editText2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textCapSentences">
		    </EditText>
		        
			<TextView
		        android:id="@+id/textView6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pilot_nationality"
		        android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/text3" />
		
		    <Spinner
		        android:id="@+id/spinner6"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent" />

		    <TextView
		        android:id="@+id/textView7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pilot_language"
		        android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/text3" />
		
		    <Spinner
		        android:id="@+id/spinner7"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent" />		    
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pilot_email"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/text3" />

		    <EditText
		        android:id="@+id/editText3"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textEmailAddress">
		    </EditText>
		        		    		
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pilot_frequency"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="@color/text3" />
		
		    <EditText
		        android:id="@+id/editText4"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="numberDecimal" />
		
		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pilot_models"
		        android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/text3" />
		
		    <EditText
		        android:id="@+id/editText5"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:ems="10"
		        android:inputType="textCapSentences" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:text="@string/button_next" />
		</LinearLayout>
        </ScrollView>
</RelativeLayout>