<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:id="@+id/current_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:layout_gravity="center_horizontal"
        android:textColor="?attr/t2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/next_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:gravity="center"
        android:textColor="?attr/t2"
        android:textSize="@dimen/clock_time" >

    </TextView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/twenty">

        <Button
            android:id="@+id/button_abort"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/abort"
            style="@style/AppTheme.Button.Negative" />

        <Button
            android:id="@+id/button_finish_race"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/finish_race"
            style="@style/AppTheme.Button.Neutral" />

        <Button
            android:id="@+id/button_next_round"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/next_round"
            style="@style/AppTheme.Button.Positive" />
    </LinearLayout>
</LinearLayout>
