<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/number"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:background="@drawable/circle"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:minHeight="68dp"
            android:textColor="@color/text2"
            android:textSize="16sp"
            android:textStyle="bold" >

        </TextView>

        <TextView
            android:id="@+id/current_pilot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text3" >
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/thirty"
        android:textColor="@color/text3"
        android:textSize="60sp" >
    </TextView>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/space"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text3" >
    </TextView>

    <TextView
            android:id="@+id/wind_warning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/warning"
            android:visibility="invisible"
            android:text="@string/wind_warning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_warning" />
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/space"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text3" >

        </TextView>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarButtonStyle">
        <Button
            android:id="@+id/button_start_working_time"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/start_working_time"
            style="?android:attr/buttonBarButtonStyle">

        </Button>
        <Button
            android:id="@+id/button_model_launched"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/model_launch"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
       <Button
            android:id="@+id/button_abort"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/abort"
            style="?android:attr/buttonBarButtonStyle">

        </Button>
    </LinearLayout>

</LinearLayout>
