<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	 	android:background="@drawable/grey_box">
    	<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@android:color/transparent"
	    	android:paddingLeft="10dp"
	    	android:paddingRight="10dp"
	    	android:paddingTop="10dp"
	    	android:paddingBottom="10dp">
			<TextView
				android:id="@+id/title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/text2" />

			<TextView
				android:id="@+id/version"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/version"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="@color/text2"
				android:textStyle="italic"
				android:layout_marginBottom="16dp"/>

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/help"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:textColor="@color/text2" />
		
		</LinearLayout>        
</RelativeLayout>